# kg-server

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml
app/: cli.py  config.py  database.py  main.py  settings.py
app/api/: __init__.py  auth.py  documents.py  graph.py  keywords.py
app/core/: arq.py  response.py
app/dependencies/: auth.py  document.py  documents.py  graph.py  keyword.py  redis.py
app/exceptions/: keyword.py
app/models/: __init__.py  document.py  graph.py  keyword.py  user.py
app/schemas/: base.py  document.py  graph.py  keyword.py  subject.py  user.py
app/services/: __init__.py  auth.py  doc_keyword.py  document.py  graph.py  keyword.py
app/utils/: auth.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  documents.py  keywords.py
backend/app/dependencies/: documents.py  keywords.py
backend/app/models/: __init__.py  document.py  keyword.py  subject.py
backend/app/preprocessing/: __init__.py  core.py  extract_text.py  normalize_text.py  normolize_text.py
backend/app/schemas/: document.py  keyword.py  preprocessing.py  subject.py
backend/app/services/: __init__.py  doc_keyword.py  document.py  keyword.py
backend/ckgcus_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_document.py  test_keywords.py
backend/tests/preprocessing/: test_clean_text.py  test_normalize.py  test_normalize_text.py
backend/tests/services/: test_doc_keyword.py  test_document.py  test_keyword.py
backend/tests/test_services/: test_doc_keyword.py  test_keyword.py
ckgcus/preprocessing/: FilePreprocessor.py  __init__.py  _preprocess_text.py  clean_text.py  core.py  extract_text.py  remove_duplicated_text.py  utils.py
ckgcus/preprocessing/_toolkit/: __init__.py  clean_text.py  convert_text.py  recognize_text.py  remove_duplicated_text.py  tokenize_text.py
data/: README.md
docker/postgres/: init.sql
docs/: TEAM_TASKS.md  TODO.md  backend.md  database.md  datacommit.md  development.md  frontend.md  installation.md  upload.md
python/: setup.py
python/ckgcus/preprocessing/: core.py
scripts/: backup-db.sh  create_project_structure.py  init_db.py  init_subjects.py  restore-db.sh  test_auth.py  upload_docs.py
src/dependencies/: documents.py
src/schemas/: document.py
src/services/: document.py
tests/: conftest.py  test_clean_text.py
tests/api/: conftest.py  test_document.py  test_keywords.py
tests/services/: test_document.py  test_keyword.py
