[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-server"
version = "0.1.0"
description = "Knowledge Graph Construction System Backend"
authors = [{ name = "Dawnfz-Lenfeng", email = "2912706234@qq.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "aiofiles",
    "kgtools[schema] @ git+https://github.com/Dawnfz-lenfeng/kgtools.git",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "flake8",
    "mypy",
    "black",
]

[project.scripts]
kg-server = "uvicorn.main:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = "alembic/versions/"

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
combine_as_imports = true
skip = ["alembic/versions"]

[tool.mypy]
python_version = "3.10"
exclude = ["tests/", "alembic/", "scripts/"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
