[metadata]
name = ckgcus
description = 中文知识图谱
long_description = file: README.md
long_description_content_type = text/markdown
author = Dawnfz
author_email = 2912706234@qq.com
url = https://github.com/Dawnfz-Lenfeng/CKG_CUS
python_requires = >=3.10
version = 0.0.1

[options]
packages = find:
install_requires =
    pdf2image==1.17.0
    pdfplumber==0.11.0
    pytesseract==0.3.10
