[build-system]
requires = ["setuptools<64"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = "alembic/versions/"

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
combine_as_imports = true
skip = ["alembic/versions"]

[tool.mypy]
python_version = "3.10"
exclude = ["tests/", "alembic/"]

[[tool.mypy.overrides]]
module = ["cnocr.*", "pytesseract.*", "paddleocr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
