[project]
name = "ckgcus-backend"
version = "0.1.0"
description = "Knowledge Graph Construction System Backend"
authors = [
    {name = "Dawnfz-Lenfeng", email = "2912706234@qq.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "tqdm",
    "aiofiles",
    "pdf2image",
    "pdfplumber",
    "cnocr[ort-cpu]",
    "pytesseract",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "flake8",
    "mypy",
    "black",
]
paddleocr = [
    "paddlepaddle",
    "paddleocr",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = "alembic/versions/"

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
combine_as_imports = true
skip = ["alembic/versions"]

[tool.mypy]
python_version = "3.10"
exclude = ["tests/", "alembic/"]

[[tool.mypy.overrides]]
module = ["cnocr.*", "pytesseract.*", "paddleocr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
