[metadata]
name = ckgcus-backend
version = 0.1.0
description = Knowledge Graph Construction System Backend
author = Dawnfz-Lenfeng
author_email = 2912706234@qq.com
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.104.1
    uvicorn>=0.24.0
    sqlalchemy>=2.0.23
    psycopg2-binary>=2.9.9
    python-multipart>=0.0.6
    pydantic>=2.5.1
    pydantic-settings>=2.1.0
    python-dotenv>=1.0.0
    alembic

    pdf2image>=1.16.3
    pdfplumber>=0.10.3
    cnocr>=2.2.2.3
    tqdm>=4.66.1

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-cov>=4.1.0
    httpx>=0.25.1
    flake8>=6.1.0
    mypy>=1.7.0
    black>=23.11.0

paddleocr =
    paddleocr>=2.7.0.3

tesseract =
    pytesseract>=0.3.10

all =
    paddleocr>=2.7.0.3
    pytesseract>=0.3.10

[options.packages.find]
include = app*
