[metadata]
name = ckgcus-backend
version = 0.1.0
description = Knowledge Graph Construction System Backend
author = Dawnfz-Lenfeng
author_email = 2912706234@qq.com
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi
    uvicorn
    sqlalchemy
    psycopg2-binary
    python-multipart
    pydantic
    pydantic-settings
    python-dotenv
    alembic

    pdf2image
    pdfplumber
    cnocr[ort-cpu]
    tqdm

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-cov
    httpx
    flake8
    mypy
    black
    # ocr engines
    pytesseract
    paddlepaddle
    paddleocr

paddleocr =
    paddlepaddle
    paddleocr

tesseract =
    pytesseract

all =
    pytesseract
    paddlepaddle
    paddleocr

[options.packages.find]
include = app*
