[metadata]
name = ckgcus-backend
version = 0.1.0
description = Knowledge Graph Construction System Backend
author = Dawnfz-Lenfeng
author_email = 2912706234@qq.com
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi
    uvicorn

    sqlalchemy[asyncio]
    asyncpg
    aiosqlite
    alembic

    python-multipart
    pydantic
    pydantic-settings
    python-dotenv
    tqdm
    aiofiles

    pdf2image
    pdfplumber
    cnocr[ort-cpu]
    pytesseract

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    pytest-cov
    httpx
    flake8
    mypy
    black

paddleocr =
    paddlepaddle
    paddleocr

[options.packages.find]
include = app*
